--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+
+body{
+  margin: 0;
+  padding: 0;
+  background: url("https://images2.alphacoders.com/722/thumb-1920-72270.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+   background-size: cover;
+   height: 100%;
+   width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+#clock-title{
+  margin-top: 0;
+   text-align: center;
+   font-family: 'Creepster', cursive;
+    font-size: 5rem;
+   color: white;
+   letter-spacing: 5px;
+   word-spacing: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.mainContainer {
+  width: 500px;
   color: white;
+  background-color: black;
+  border: 5px solid white;
+  margin: 10px auto;
+  box-shadow: 0px 0px 10px 10px red;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+
+.dateTitleContainer,.timeTitleContainer{
+  font-family: 'Creepster', cursive;
+  font-size: 3rem;
+  display: flex;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.dateValueContainer,.timeValueContainer{
+  font-family: 'Orbitron', sans-serif;
+  display: flex;
+  justify-content: space-between;
+  border: 3px solid grey;
+  width: 80%;
+  margin: auto;
+  padding: 0px 20px;
+}
+
+
+.dayContainer{
+  font-family: 'Creepster', cursive;
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-around;
 }
